--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <title>Porfolio Gabriel Teresczuk</title>
+    <link rel="icon" type="image/x-icon" href="/icon.png">
 </head>
 <body>
 
@@ -21,9 +22,9 @@
                 <div class="logo">Teresczuk <div>Gabriel</div> </div>
                 <nav>
                     <ul class="navbar">
-                        <li class="hvr-underline-from-left">HOME</li>
+                        <li class="active">HOME</li>
                         <li class="hvr-underline-from-left"><a href="#proyectos">PROYECTOS</a></li>
-                        <li class="hvr-underline-from-left">CV</li>
+                        <li class="hvr-underline-from-left"><a href="cv.pdf" target="_blank">CV</a></li>
                         <li class="hvr-underline-from-left">ACERCA</li>
                     </ul>
                 </nav>
@@ -125,16 +126,16 @@
         <footer class="footer">
                 <div class="footerContent">
                     <div class="footerRedes">
-                        <div class="redes"><i class="fa-brands fa-facebook-f"></i></div>
-                        <div class="redes"><i class="fa-brands fa-github"></i></i></div>
-                        <div class="redes"><i class="fa-brands fa-twitter"></i></i></div>
-                        <div class="redes"><i class="fa-brands fa-linkedin-in"></i></div>
+                        <a href="https://www.facebook.com/gabriel.teresczuk/" target="_blank"><div class="redes"><i class="fa-brands fa-facebook-f"></i></div></a>
+                        <a href="https://github.com/gabrielteresczuk" target="_blank"><div class="redes"><i class="fa-brands fa-github"></i></div></a>
+                        <a href="https://twitter.com/" target="_blank"><div class="redes"><i class="fa-brands fa-twitter"></i></i></div></a>
+                        <a href="https://www.linkedin.com/in/gabriel-teresczuk/" target="_blank"><div class="redes"><i class="fa-brands fa-linkedin-in"></i></div></a>
                     </div>
                     <div class="footerNav">
                         <ul>
-                            <li>Home</li>
-                            <li>Proyectos</li>
-                            <li>Cv</li>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#proyectos">Proyectos</a></li>
+                            <li><a href="cv.pdf" target="_blank">CV</a></li>
                             <li>Acerca</li>
                         </ul>
                     </div>
