--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <title>Porfolio Gabriel Teresczuk</title>
-    <link rel="icon" type="image/x-icon" href="/icon.png">
+    <link rel="icon" type="image/x-icon" href="icon.png">
 </head>
 <body>
 
@@ -57,6 +57,25 @@
 
             <div class="cardsContainer">
 
+
+                <div class="cardLeft" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="cardLeftImgCont"><img class="cardLeftImg" src="img/motoshop.png" alt="" srcset=""></div>
+                    <div class="cardLeftTextoCont">
+                        <div class="cardLeftTextoTitulo">
+                            <b>MotoShop</b><span>30-06-2022</span>
+                        </div>
+                        <div class="cardLeftTextoResumen">Aplicativo de Ecommerce</div>
+                        <div class="cardLeftTextoDesc">Proyecto final para el modulo de React.js de CoderHouse. En este proyecto abarca todo lo realacionado a react con hooks, routers y context. El proyecto se basa en una tienda de motocicletas, donde podes filtrar, agregar a favoritos, sumar al carrito, modificar stock, validar un checkout, y guardar la compra en una base de datos en firebase.</div>
+                        <div class="cardLeftTextoTags"><span>HTML</span><span>CSS</span><span>JS</span><span>REACT</span><span>Firebase</span></div>
+                        <div class="cardLeftTextoButtons">
+                            <a href="https://gabrielteresczuk.github.io/motoshop/" target="_blank"><button> <i class="fa-solid fa-eye"></i> Ver </button></a>
+                            <button> <i class="fa-solid fa-code"></i> Explorar</button>
+                            <a href="https://github.com/gabrielteresczuk/motoshop" target="_blank"><button> <i class="fa-brands fa-github"></i> Github</button></a>
+                        </div>
+
+                    </div>
+                </div>
+
                 <div class="cardLeft" data-aos="fade-up" data-aos-duration="1000">
                     <div class="cardLeftImgCont"><img class="cardLeftImg" src="img/reaskct.png" alt="" srcset=""></div>
                     <div class="cardLeftTextoCont">
@@ -99,13 +118,139 @@
                         <div class="cardLeftTextoTitulo">
                             <b>ToolBox</b><span>09-05-2022</span>
                         </div>
-                        <div class="cardLeftTextoResumen">Aplicacion Ecommers Vanilla JS</div>
+                        <div class="cardLeftTextoResumen">Aplicacion Ecommerce Vanilla JS</div>
                         <div class="cardLeftTextoDesc">Aplicacon realizada para aprobar el modulo JS de CoderHouse. En la misma se pueden listar y realizar compas de diferentes productos, filtrando por marca, precio, si existen ofertas o no, control de stock y al final un simple checkout.</div>
                         <div class="cardLeftTextoTags"><span>HTML</span><span>CSS</span><span>JS</span></div>
                         <div class="cardLeftTextoButtons">
                             <a href="https://gabrielteresczuk.github.io/toolbox/" target="_blank"><button> <i class="fa-solid fa-eye"></i> Ver </button></a>
                             <button> <i class="fa-solid fa-code"></i> Explorar</button>
                             <a href="https://github.com/gabrielteresczuk/toolbox" target="_blank"><button> <i class="fa-brands fa-github"></i> Github</button></a>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="cardLeft" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="cardLeftImgCont"><img class="cardLeftImg" src="img/portfolio1.png" alt="" srcset=""></div>
+                    <div class="cardLeftTextoCont">
+                        <div class="cardLeftTextoTitulo">
+                            <b>Portafolio</b><span>10-04-2022</span>
+                        </div>
+                        <div class="cardLeftTextoResumen">Porfolio para FreeCodeCamp</div>
+                        <div class="cardLeftTextoDesc"> Creacion de un portfolio para presentar al modulo de FreeCodeCamp, el cual alverga todos los proyectos de react js</div>
+                        <div class="cardLeftTextoTags"><span>HTML</span><span>CSS</span><span>React js</span></div>
+                        <div class="cardLeftTextoButtons">
+                            <a href="https://gabrielteresczuk.github.io/portfolio/" target="_blank"><button> <i class="fa-solid fa-eye"></i> Ver </button></a>
+                            <button> <i class="fa-solid fa-code"></i> Explorar</button>
+                            <a href="https://github.com/gabrielteresczuk/portfolio" target="_blank"><button> <i class="fa-brands fa-github"></i> Github</button></a>
+                        </div>
+
+                    </div>
+                </div>                
+
+                <div class="cardLeft" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="cardLeftImgCont"><img class="cardLeftImg" src="img/pomodoro.png" alt="" srcset=""></div>
+                    <div class="cardLeftTextoCont">
+                        <div class="cardLeftTextoTitulo">
+                            <b>Reloj Pomodoro React.js</b><span>04-04-2022</span>
+                        </div>
+                        <div class="cardLeftTextoResumen">Proyecto 05 de React.js de FreeCodeCamp</div>
+                        <div class="cardLeftTextoDesc">Podemos marcar los tiempo de "trabajo" y de "descanso", al dar play, comienza a descontar el tiempo hata llegar a cero, en ese punto comienza automaticamente el descanzo, luego se repite el ciclo.  </div>
+                        <div class="cardLeftTextoTags"><span>HTML</span><span>CSS</span><span>React js</span></div>
+                        <div class="cardLeftTextoButtons">
+                            <a href="https://gabrielteresczuk.github.io/05-clock/" target="_blank"><button> <i class="fa-solid fa-eye"></i> Ver </button></a>
+                            <button> <i class="fa-solid fa-code"></i> Explorar</button>
+                            <a href="https://github.com/gabrielteresczuk/05-clock" target="_blank"><button> <i class="fa-brands fa-github"></i> Github</button></a>
+                        </div>
+
+                    </div>
+                </div>                   
+
+                <div class="cardLeft" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="cardLeftImgCont"><img class="cardLeftImg" src="img/calculator.png" alt="" srcset=""></div>
+                    <div class="cardLeftTextoCont">
+                        <div class="cardLeftTextoTitulo">
+                            <b>Calculadora React.js</b><span>03-04-2022</span>
+                        </div>
+                        <div class="cardLeftTextoResumen">Proyecto 04 de React.js de FreeCodeCamp</div>
+                        <div class="cardLeftTextoDesc">En este proyecto se realiza una calculadora con memoria la cual se pueden ir anidando operaciones de suma, resta, multiplicacion y division.</div>
+                        <div class="cardLeftTextoTags"><span>HTML</span><span>CSS</span><span>React js</span></div>
+                        <div class="cardLeftTextoButtons">
+                            <a href="https://gabrielteresczuk.github.io/04-calculator/" target="_blank"><button> <i class="fa-solid fa-eye"></i> Ver </button></a>
+                            <button> <i class="fa-solid fa-code"></i> Explorar</button>
+                            <a href="https://github.com/gabrielteresczuk/04-calculator" target="_blank"><button> <i class="fa-brands fa-github"></i> Github</button></a>
+                        </div>
+
+                    </div>
+                </div>                  
+
+                <div class="cardLeft" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="cardLeftImgCont"><img class="cardLeftImg" src="img/drummachine.png" alt="" srcset=""></div>
+                    <div class="cardLeftTextoCont">
+                        <div class="cardLeftTextoTitulo">
+                            <b>Drum Machine React.js</b><span>02-04-2022</span>
+                        </div>
+                        <div class="cardLeftTextoResumen">Proyecto 03 de React.js de FreeCodeCamp</div>
+                        <div class="cardLeftTextoDesc">En este proyecto se realiza un teclado interactivo que puede reproducir sonidos al clickear cada boton, tambien funciona presionando las teclas que corresponden al teclado qwerty.</div>
+                        <div class="cardLeftTextoTags"><span>HTML</span><span>CSS</span><span>React js</span></div>
+                        <div class="cardLeftTextoButtons">
+                            <a href="https://gabrielteresczuk.github.io/03-drum-machine/" target="_blank"><button> <i class="fa-solid fa-eye"></i> Ver </button></a>
+                            <button> <i class="fa-solid fa-code"></i> Explorar</button>
+                            <a href="https://github.com/gabrielteresczuk/03-drum-machine" target="_blank"><button> <i class="fa-brands fa-github"></i> Github</button></a>
+                        </div>
+
+                    </div>
+                </div>                 
+
+                <div class="cardLeft" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="cardLeftImgCont"><img class="cardLeftImg" src="img/markdown.png" alt="" srcset=""></div>
+                    <div class="cardLeftTextoCont">
+                        <div class="cardLeftTextoTitulo">
+                            <b>MarkDown React.js</b><span>01-04-2022</span>
+                        </div>
+                        <div class="cardLeftTextoResumen">Proyecto 02 de React.js de FreeCodeCamp</div>
+                        <div class="cardLeftTextoDesc">En este proyecto se realiza un interprete de codigo de marcado, en el lado izquierdo escribimos el codigo y a la derecha podemos ver el interpretado.</div>
+                        <div class="cardLeftTextoTags"><span>HTML</span><span>CSS</span><span>React js</span></div>
+                        <div class="cardLeftTextoButtons">
+                            <a href="https://gabrielteresczuk.github.io/02-markdown/" target="_blank"><button> <i class="fa-solid fa-eye"></i> Ver </button></a>
+                            <button> <i class="fa-solid fa-code"></i> Explorar</button>
+                            <a href="https://github.com/gabrielteresczuk/02-markdown" target="_blank"><button> <i class="fa-brands fa-github"></i> Github</button></a>
+                        </div>
+
+                    </div>
+                </div> 
+
+                <div class="cardLeft" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="cardLeftImgCont"><img class="cardLeftImg" src="img/randomQuote.png" alt="" srcset=""></div>
+                    <div class="cardLeftTextoCont">
+                        <div class="cardLeftTextoTitulo">
+                            <b>Random Quote React.js</b><span>30-03-2022</span>
+                        </div>
+                        <div class="cardLeftTextoResumen">Proyecto 01 de React.js de FreeCodeCamp</div>
+                        <div class="cardLeftTextoDesc">En este proyecto, se logra hacer llamadas a una API de frases, con el uso de Fetch, traer una frase al azar, montarla y modificar los colores de la aplicacion cada vez que cambie la frase.</div>
+                        <div class="cardLeftTextoTags"><span>HTML</span><span>CSS</span><span>React js</span></div>
+                        <div class="cardLeftTextoButtons">
+                            <a href="https://gabrielteresczuk.github.io/01-random-quote/" target="_blank"><button> <i class="fa-solid fa-eye"></i> Ver </button></a>
+                            <button> <i class="fa-solid fa-code"></i> Explorar</button>
+                            <a href="https://github.com/gabrielteresczuk/01-random-quotel" target="_blank"><button> <i class="fa-brands fa-github"></i> Github</button></a>
+                        </div>
+
+                    </div>
+                </div>                
+
+                <div class="cardLeft" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="cardLeftImgCont"><img class="cardLeftImg" src="img/ecoturismo.png" alt="" srcset=""></div>
+                    <div class="cardLeftTextoCont">
+                        <div class="cardLeftTextoTitulo">
+                            <b>EcoTurismo</b><span>10-03-2022</span>
+                        </div>
+                        <div class="cardLeftTextoResumen">Landing Page Ecoturismo</div>
+                        <div class="cardLeftTextoDesc">Proyecto final para el modulo Diseño Web de Coder House. El desafio se presenta con la creacion de una landing page para mostrar lugares turisticos de la provincia de misiones usando las tecnologias de HTML+CSS+BOOSTRAP </div>
+                        <div class="cardLeftTextoTags"><span>HTML</span><span>CSS</span><span>Boostrap</span></div>
+                        <div class="cardLeftTextoButtons">
+                            <a href="https://gabrielteresczuk.github.io/eco-turismo-teresczuk-final/" target="_blank"><button> <i class="fa-solid fa-eye"></i> Ver </button></a>
+                            <button> <i class="fa-solid fa-code"></i> Explorar</button>
+                            <a href="https://github.com/gabrielteresczuk/eco-turismo-teresczuk-final" target="_blank"><button> <i class="fa-brands fa-github"></i> Github</button></a>
                         </div>
 
                     </div>
@@ -151,4 +296,4 @@
 
 <script>
     AOS.init();
-  </script>
+</script>
