--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <li class="active">HOME</li>
                         <li class="hvr-underline-from-left"><a href="#proyectos">PROYECTOS</a></li>
                         <li class="hvr-underline-from-left"><a href="cv.pdf" target="_blank">CV</a></li>
-                        <li class="hvr-underline-from-left">ACERCA</li>
+                        <li class="hvr-underline-from-left"><a href="acerca.html">ACERCA</a> </li>
                     </ul>
                 </nav>
             </div>
@@ -281,7 +281,7 @@
                             <li><a href="#">Home</a></li>
                             <li><a href="#proyectos">Proyectos</a></li>
                             <li><a href="cv.pdf" target="_blank">CV</a></li>
-                            <li>Acerca</li>
+                            <li><a href="acerca.html">Acerca</a></li>
                         </ul>
                     </div>
                 </div>
