--- a/acerca.html
+++ b/acerca.html
@@ -34,7 +34,7 @@
             <p>Cuento con más de 10 años trabajando en el área de IT.</p>
             <p>Luego de finalizar mis estudios  me volqué de lleno al mundo informático realizando pequeñas aplicaciones web en php , sitios web interactivos y servidores de video juegos.</p>
             <p>Siempre me ha gustado todo lo referido a la tecnología y al manejo sustentable de la energía.</p>
-            <p>De un giro y pase de las líneas de código, al servicio técnico abocado al hardware, y al soporte técnico de aplicaciones, por eso decidí actualizar mis conocimientos sobre componentes eléctricos  y electrónicos, finalizando con la automatización industrial.</p>   
+            <p>De un giro pase de las líneas de código, al servicio técnico abocado al hardware, y al soporte técnico de aplicaciones, por eso decidí actualizar mis conocimientos sobre componentes eléctricos  y electrónicos, finalizando con la automatización industrial.</p>   
             <p>Me encanta realizar capacitaciones y aportar cosas nuevas al equipo de trabajo.</p>
             <p>También me gusta pasar tiempo libre realizando actividades deportivas al aire libre, como el running y la aventura. Me apaciona cocinar, reparar y construir cosas, aprender su funcionamiento y por optimizarlo.</p>
             
